# Practice

./: Homework 3.1.cpp  Homework 3.2.cpp  Homework 3.3.cpp  Homework 3.4.cpp  Homework 3.5.cpp  Homework 3.6.cpp  Homework 3.7.cpp  Homework 3.8.cpp  Homework 3.9.cpp  Homework 3.sln  Homework 3.vcxproj  Homework 3.vcxproj.filters  LICENSE  README.md  Source.h
practice 10/: Homework 10.1.cpp  read.me
practice 11/: Homework 11.1.cpp  Homework 11.2.cpp  Homework 11.3.cpp  Homework 11.4.cpp  read.me
practice 12/: Homework 12.1.cpp  Homework 12.2.cpp  Homework 12.3.cpp  Homework 12.4.cpp  read.me
practice 13/: Homework 13.1.cpp  Homework 13.2.cpp  Homework 13.3.cpp  read.me
practice 14/: Homework 14.1.cpp  Homework 14.2.cpp  Homework 14.3.cpp  Homework 14.4.cpp  Homework 14.5.cpp  Homework 14.6.cpp  Homework 14.7.cpp  Homework 14.8.cpp  read.me
practice 15/: Homework 15.1.cpp  Homework 15.2.cpp  Homework 15.3.cpp  Homework 15.4.cpp  read.me
practice 16/: Homework 16.1.cpp  Homework 16.2.cpp  Homework 16.3.cpp  Homework 16.4.cpp  Homework 16.5.cpp  read.me
practice 17/: Homework 17.1.cpp  Homework 17.2.cpp  Homework 17.3.cpp  read.me
practice 18/: Homework 18.1.cpp  Homework 18.2.cpp  Homework 18.3.cpp  Homework 18.4.cpp  read.me
practice 22/: Homework 22.1.cpp  Homework 22.2.cpp  Homework 22.3.cpp  read.me
practice 23/: Homework 23.1.cpp  Homework 23.2.cpp  Homework 23.3.cpp  read.me
practice 24/: Homework 24.1.cpp  Homework 24.2.cpp  Homework 24.3.cpp  read.me
practice 28/: CMakeLists.txt
practice 3/: Homework 3.1.cpp  Homework 3.2.cpp  Homework 3.3.cpp  Homework 3.4.cpp  Homework 3.5.cpp  Homework 3.6.cpp  Homework 3.7.cpp  Homework 3.8.cpp  Homework 3.9.cpp  Source.h  read.me
practice 30/Task 1/: CMakeLists.txt  read.me
practice 30/Task 1/include/: http_cpr.h
practice 30/Task 1/src/: http_cpr.cpp  main.cpp
practice 30/Task 3/: CMakeLists.txt  read.me
practice 30/Task 3/include/: http_cpr.h
practice 30/Task 3/src/: CMakeLists.txt  http_cpr.cpp  main.cpp
practice 32/Task 2/nlohmann_json/: CMakeLists.txt
practice 36/: CMakeLists.txt  main.cpp  read.me
practice 39/: CMakeLists.txt  main.cpp  main.qml  (+2 more)
(+336 files in other folders)
